--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -1002,7 +1002,7 @@ span.rename {
     cursor: pointer;
 }
 
-div.name:hover span.rename {
+div.name:hover span.rename, span.rename_hovered {
     color: #3D3D3D;
     margin-top: 0.4em;
     background-image: url(./pencil.png);
